force-app/main/default/objects/DefaultGreenhouseMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Greenhouse_Parent_Table__c</fullName>
        <label>Greenhouse Parent Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenhouse_Property__c</fullName>
        <label>Greenhouse Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenhouse_Table__c</fullName>
        <label>Greenhouse Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Field__c</fullName>
        <label>Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object__c</fullName>
        <label>Salesforce Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Greenhouse Default Mapping</label>
    <listViews>
        <fullName>All_Candidates</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Greenhouse_Parent_Table__c</columns>
        <columns>Greenhouse_Table__c</columns>
        <columns>Greenhouse_Property__c</columns>
        <columns>Salesforce_Object__c</columns>
        <columns>Salesforce_Field__c</columns>
        <columns>Value__c</columns>
        <columns>Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Greenhouse_Table__c</field>
            <operation>equals</operation>
            <value>Candidates</value>
        </filters>
        <label>All Candidates</label>
    </listViews>
    <pluralLabel>DefaultGreenhouseMapping</pluralLabel>
</CustomObject>